# my_lib

./: .gitignore  README.md  out.txt  конспект
.cache/clangd/index/: main.cpp.DC9AF15BC88C28BB.idx  test.cpp.7CFAD3ACAC8B5990.idx  writer.cpp.C01FCA8739514322.idx  writer.hpp.E9179112B3CCC6AE.idx
app_project/: CMakeLists.txt  main.cpp
mylib/: CMakeLists.txt  conanfile.py
mylib/include/: mylib_config.hpp.in  writer.hpp
mylib/src/: writer.cpp
mylib/test/: test.cpp  test_gtest.cpp  test_gzip.cpp
mylib/tools/: gen_header.py
